[package]
name = "procstat"
version = "0.1.18"
edition = "2021"
license = "apache-2.0"
description = "A utility to show and extract runtime statistics from a linux system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "procstat"
path = "src/main.rs"

[dependencies]
axum = "0.7.2"
bounded-vec-deque = "0.1.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = "3.4.1"
dhat = "0.3.2"
env_logger = "0.11.0"
futures = "0.3.30"
image = "0.24.7"
log = "0.4.20"
once_cell = "1.19.0"
plotters = "0.3.5"
proc_sys_parser = "0.1.17"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
serde_json = "1.0.111"
sysctl = "0.5.5"
tokio = { version = "1.35.0", features = ["full"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/procstat", dest = "/usr/local/bin/procstat", mode="0755" }
]
release = "1.el8"

[package.metadata.deb]
copyright = "2021, Frits Hoogland <fhoogland@gmail.com>"
maintainer = "Frits Hoogland <fhoogland@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/procstat", "/usr/local/bin/", "755"]
]

[profile.release]
debug = 1

[features]
dhat-heap = []
