[package]
name = "procstat"
version = "0.1.31"
edition = "2021"
license = "apache-2.0"
description = "A utility to show and extract runtime statistics from a linux system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "procstat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
ctrlc = "3.4.4"
dhat = "0.3.3"
env_logger = "0.11.3"
futures = "0.3.30"
image = "0.25.1"
log = "0.4.22"
once_cell = "1.19.0"
plotters = "0.3.6"
proc_sys_parser = "0.1.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
sysctl = "0.5.5"
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
axum_session = "0.14.0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/procstat", dest = "/usr/local/bin/procstat", mode = "0755" },
]
release = "1.el8"

[package.metadata.deb]
copyright = "2024, Frits Hoogland <fhoogland@gmail.com>"
maintainer = "Frits Hoogland <fhoogland@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [["target/release/procstat", "/usr/local/bin/", "755"]]

[profile.release]
debug = 1

[features]
dhat-heap = []
