[package]
name = "procstat"
version = "0.1.34"
edition = "2021"
license = "apache-2.0"
description = "A utility to show and extract runtime statistics from a linux system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "procstat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.90"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
dhat = "0.3.3"
env_logger = "0.11.5"
futures = "0.3.31"
image = "0.25.4"
log = "0.4.22"
once_cell = "1.20.2"
plotters = "0.3.7"
proc_sys_parser = "0.1.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.132"
sysctl = "0.6.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
axum_session = "0.14.4"
ordered-float = "4.4.0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/procstat", dest = "/usr/local/bin/procstat", mode = "0755" },
]
release = "1.el8"

[package.metadata.deb]
copyright = "2024, Frits Hoogland <fhoogland@gmail.com>"
maintainer = "Frits Hoogland <fhoogland@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [["target/release/procstat", "/usr/local/bin/", "755"]]

[profile.release]
debug = 1

[features]
dhat-heap = []
